# GraphVisualizator

./: CMakeLists.txt  README.md
headers/: InfoOps.h  SortMaster.h
sources/: InfoOps.cpp  SortGui.cpp
